Feat: Add auto-scrolling image slideshow to home page
This commit introduces an auto-scrolling image slideshow to the home page and includes several UI enhancements and minor code refactors.

**Home Page (`HOME_PAGE.java` & `home.xml`):**
*   Implemented a `ViewPager2` to display an image slideshow featuring various Call of Duty Zombies games.
*   Added a new `ImageSliderAdapter` to manage the images within the slideshow.
*   Introduced an auto-scroll feature that cycles through the slides every 10 seconds, pausing and resuming with the activity lifecycle.
*   The slideshow is presented within a `CardView` for a modern, elevated look.
*   Updated the layout by styling the "Welcome" text and adjusting margins for a cleaner appearance.
*   Added new drawable assets for each slide.

**UI and Code Refinements:**
*   Increased the corner radius for the `rounded_rectangle_background.xml` from 12dp to 20dp.
*   Refactored the `showFirstTimeDialog()` method in `HOME_PAGE.java` to use string variables instead of hardcoded text.
*   In `BlackOps3_Map_Object_Handler.java`, replaced `new ArrayList<>(Arrays.asList(...))` with the more modern and concise `new ArrayList<>(List.of(...))` for creating lists.